--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -13,7 +13,7 @@ jobs:
       - name: Generate snake
         uses: Platane/snk@v3
         with:
-          github_user_name: thanweerfahim
+          github_user_name: Thanweerfahim
           outputs: |
             dist/snake.svg
             dist/snake-dark.svg?palette=github-dark
