--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -2,18 +2,18 @@ name: Generate Snake Animation
 
 on:
   schedule:
-    - cron: "0 0 * * *"   # Runs every day at midnight
-  workflow_dispatch:      # Allow manual trigger
+    - cron: "0 0 * * *" # daily at midnight
+  workflow_dispatch:     # allow manual run
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout
+      - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Generate snake
+      - name: Generate Snake
         uses: Platane/snk@v3
         with:
           github_user_name: thanweerfahim
@@ -23,11 +23,10 @@ jobs:
             dist/snake-rainbow.svg?palette=rainbow
             dist/snake-neon.svg?palette=neon
 
-      - name: Push snake
-        uses: crazy-max/ghaction-github-pages@v4
+      - name: Push to output branch
+        uses: ad-m/github-push-action@v0.6.0
         with:
-          target_branch: output
-          build_dir: dist
+          branch: output
+          folder: dist
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
